fix:Убран overflow

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -9,5 +9,4 @@
     min-width: 320px;
     margin: 0 auto;
     height: 100%;
-    overflow-y: scroll;
 }
